tests/snapshots/test_runner__tests__compiler__typecheck__enum_4__enum_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
class Foo = Bar(String)

let a : Foo = Bar

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/enum_4/enum_4.kk:3:15
  │
3 │ let a : Foo = Bar
  │               ^^^ Type mismatch
  │
  = +---------------+-----------------+
    | EXPECTED TYPE |   ACTUAL TYPE   |
    +---------------+-----------------+
    | - Foo         | + String -> Foo |
    +---------------+-----------------+
